add Enemies and Elevators

--- a/ScoreGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ScoreGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,6 @@ CurrentPosGridSize=0
 MRUItem0=/Game/MyContent/DemoLevel
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -144,8 +143,11 @@ LastLevel=/Game/MyContent/DemoLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/MyContent/EnemyHead.EnemyHead
 
 [PlacementMode]
+RecentlyPlaced=/Game/MyContent/EnemyHead.EnemyHead;
+RecentlyPlaced=/Game/MyContent/PlatformUpDown.PlatformUpDown;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
 RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
@@ -164,8 +166,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Gravel.M_Ground_Gravel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Panels.M_Concrete_Panels;
 
 [DetailCategories]
 AtmosphericFog.TransformCommon=True
@@ -542,6 +542,93 @@ PointLight.RayTracing=True
 PointLight.Tags=True
 PointLight.Cooking=True
 PointLight.Actor=True
+PlatformUpDown_C.TransformCommon=True
+PlatformUpDown_C.StaticMesh=True
+PlatformUpDown_C.Materials=True
+PlatformUpDown_C.Default=True
+PlatformUpDown_C.Physics=True
+PlatformUpDown_C.Collision=True
+PlatformUpDown_C.Lighting=True
+PlatformUpDown_C.Rendering=True
+PlatformUpDown_C.Navigation=True
+PlatformUpDown_C.VirtualTexture=True
+PlatformUpDown_C.Tags=True
+PlatformUpDown_C.Cooking=True
+PlatformUpDown_C.Replication=True
+PlatformUpDown_C.Input=True
+PlatformUpDown_C.Actor=True
+FbxExportOption.Exporter=True
+FbxExportOption.Mesh=True
+FbxExportOption.StaticMesh=True
+FbxExportOption.SkeletalMesh=True
+FbxExportOption.Animation=True
+EnemyHead_C.Tick=True
+EnemyHead_C.Actor=True
+EnemyHead_C.Replication=True
+EnemyHead_C.Rendering=True
+EnemyHead_C.Collision=True
+EnemyHead_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+StaticMeshComponent.Materials=True
+EnemyHead_C.TransformCommon=True
+EnemyHead_C.StaticMesh=True
+EnemyHead_C.ComponentTick=True
+EnemyHead_C.Physics=True
+EnemyHead_C.Lighting=True
+EnemyHead_C.Navigation=True
+EnemyHead_C.VirtualTexture=True
+EnemyHead_C.Tags=True
+EnemyHead_C.ComponentReplication=True
+EnemyHead_C.Variable=True
+EnemyHead_C.Cooking=True
+EnemyHead_C.Materials=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.ComponentTick=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.Navigation=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
+ParticleSystemComponent.Materials=True
+K2Node_Timeline.GraphNodeDetail=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+EnemyHead_C.Default=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -562,7 +649,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Props
+ContentBrowserTab1.SelectedPaths=/Game/MyContent/Meshes/Enemy
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -580,9 +667,12 @@ GameMapsSettings=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphereElems.SphereElems[0]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphereElems.SphereElems[0]\" "
+Object=
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -621,8 +711,8 @@ NormalGenerationMethod=MikkTSpace
 bComputeWeightedNormals=True
 bReorderMaterialToFbxOrder=True
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
-ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
-ImportUniformScale=1.000000
+ImportRotation=(Pitch=0.000000,Yaw=180.000000,Roll=90.000000)
+ImportUniformScale=50.000000
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
@@ -698,12 +788,18 @@ bConvertSceneUnit=False
 StaticMeshActor.Materials=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/Assets/U_Wall
-MRUItem1=/Game/StarterContent/Materials/M_CobbleStone_Pebble
+MRUItem0=/Game/MyContent/Meshes/Enemy/craneo
+MRUItem1=/Game/MyContent/EnemyHead
+MRUItem2=/Game/MyContent/Meshes/Enemy/Group5732Mat
+MRUItem3=/Game/MyContent/Assets/U_Wall
+MRUItem4=/Game/StarterContent/Materials/M_CobbleStone_Pebble
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble=1
 /Game/MyContent/Assets/U_Wall.U_Wall=1
+/Game/MyContent/Meshes/Enemy/craneo.craneo=0
+/Game/MyContent/Meshes/Enemy/Group5732Mat.Group5732Mat=1
+/Game/MyContent/EnemyHead.EnemyHead=0
 
 [MaterialEditor]
 PrimType=1
@@ -764,8 +860,8 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [RootWindow]
-ScreenPosition=X=796.000 Y=229.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=0.000 Y=0.000
+WindowSize=X=2077.000 Y=952.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1688,4 +1784,54 @@ MovieSceneCapture.TimeStamp=2023.07.17-18.41.44
 MovieSceneCapture.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2023.07.17-18.42.21
 StaticMeshEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2023.07.17-18.40.34
+BlueprintGraph.LastCompileMethod=Unknown
+
+[FBX_Export_UI_Option_FbxExportOption]
+FbxExportCompatibility=FBX_2013
+bASCII=False
+bForceFrontXAxis=False
+VertexColor=True
+LevelOfDetail=True
+Collision=True
+bExportMorphTargets=True
+bExportPreviewMesh=False
+MapSkeletalMotionToRoot=False
+bExportLocalTime=True
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
