--- a/ScoreGame/Config/DefaultEngine.ini
+++ b/ScoreGame/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/MyContent/DemoLevel.DemoLevel
 
 
 EditorStartupMap=/Game/MyContent/DemoLevel.DemoLevel
+GlobalDefaultGameMode=/Game/MyContent/MyGameMode.MyGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
