Add Damaging and door function

--- a/ScoreGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ScoreGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,12 +142,13 @@ OnlyBuildVisibility=False
 LastLevel=/Game/MyContent/DemoLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MyContent/MyPlayerController.MyPlayerController
-OpenAssetsAtExit=/Game/MyContent/MovableAssets/EndOfLevelDoor.EndOfLevelDoor
 
 [PlacementMode]
+RecentlyPlaced=/Game/MyContent/Orb.Orb;
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
+RecentlyPlaced=/Script/Engine.PainCausingVolume;/Engine/Transient.ActorFactoryBoxVolume_16
 RecentlyPlaced=/Game/MyContent/EndOfLevelDoor.EndOfLevelDoor;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
@@ -165,9 +166,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Checker_Dot.M_Tech_Checker_Dot;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Rock_Slate.M_Rock_Slate;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Burnished_Steel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
 
 [DetailCategories]
 AtmosphericFog.TransformCommon=True
@@ -733,6 +731,85 @@ K2Node_InputAxisEvent.Input=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 EndOfLevelDoor_C.Default=True
+LocalizationDashboardSettings.ServiceProvider=True
+LocalizationDashboardSettings.SourceControl=True
+LocalizationTarget.Target=True
+LocalizationTarget.Gather Text=True
+LocalizationTarget.Export Text=True
+LocalizationTarget.Compile Text=True
+LocalizationTarget.Import Dialogue=True
+LocalizationTarget.Cultures=True
+PainCausingVolume.TransformCommon=True
+PainCausingVolume.PainCausingVolume=True
+PainCausingVolume.CharacterMovement=True
+PainCausingVolume.Volume=True
+PainCausingVolume.Collision=True
+PainCausingVolume.Navigation=True
+PainCausingVolume.Tags=True
+PainCausingVolume.BrushSettings=True
+PainCausingVolume.Cooking=True
+PainCausingVolume.Replication=True
+PainCausingVolume.Actor=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Rendering=True
+TriggerBox.Cooking=True
+TriggerBox.Replication=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+DemoLevel_C.Tick=True
+DemoLevel_C.Replication=True
+DemoLevel_C.Actor=True
+DemoLevel_C.Input=True
+K2Node_CallFunction.Graph=True
+Orb_C.Tick=True
+Orb_C.Actor=True
+Orb_C.Replication=True
+Orb_C.Rendering=True
+Orb_C.Collision=True
+Orb_C.Input=True
+Orb_C.TransformCommon=True
+Orb_C.StaticMesh=True
+Orb_C.Materials=True
+Orb_C.Physics=True
+Orb_C.Lighting=True
+Orb_C.Navigation=True
+Orb_C.VirtualTexture=True
+Orb_C.Tags=True
+Orb_C.Cooking=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -763,6 +840,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -776,6 +855,16 @@ StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphereElems.SphereElems
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphereElems.SphereElems[0]\" "
 Object=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" "
+PainCausingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent=
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -895,15 +984,17 @@ StaticMeshActor.Materials=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MyContent/MovableAssets/EndOfLevelDoor
-MRUItem1=/Game/MyContent/MyPlayerController
+MRUItem1=/Game/MyContent/Orb
 MRUItem2=/Game/MyContent/Character/MyCharacter
-MRUItem3=/Game/MyContent/MyGameMode
-MRUItem4=/Game/MyContent/EndOfLevelDoor
-MRUItem5=/Game/MyContent/Meshes/Enemy/craneo
-MRUItem6=/Game/MyContent/EnemyHead
-MRUItem7=/Game/MyContent/Meshes/Enemy/Group5732Mat
-MRUItem8=/Game/MyContent/Assets/U_Wall
-MRUItem9=/Game/StarterContent/Materials/M_CobbleStone_Pebble
+MRUItem3=/Game/MyContent/MovableAssets/EnemyHead
+MRUItem4=/Game/MyContent/MyPlayerController
+MRUItem5=/Game/MyContent/MyGameMode
+MRUItem6=/Game/MyContent/EndOfLevelDoor
+MRUItem7=/Game/MyContent/Meshes/Enemy/craneo
+MRUItem8=/Game/MyContent/EnemyHead
+MRUItem9=/Game/MyContent/Meshes/Enemy/Group5732Mat
+MRUItem10=/Game/MyContent/Assets/U_Wall
+MRUItem11=/Game/StarterContent/Materials/M_CobbleStone_Pebble
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble=1
@@ -915,6 +1006,10 @@ MRUItem9=/Game/StarterContent/Materials/M_CobbleStone_Pebble
 /Game/MyContent/MovableAssets/EndOfLevelDoor.EndOfLevelDoor=0
 /Game/MyContent/MyGameMode.MyGameMode=0
 /Game/MyContent/MyPlayerController.MyPlayerController=0
+/Game/MyContent/DemoLevel.DemoLevel:PersistentLevel.DemoLevel=0
+/Game/MyContent/MovableAssets/EnemyHead.EnemyHead=0
+/Game/MyContent/Orb.Orb=1
+/Game/MyContent/MovableAssets/Orb.Orb=0
 
 [MaterialEditor]
 PrimType=1
