--- a/ScoreGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ScoreGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,8 +142,9 @@ OnlyBuildVisibility=False
 LastLevel=/Game/MyContent/DemoLevel
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyContent/Character/MyCharacter.MyCharacter
 
 [PlacementMode]
 RecentlyPlaced=/Game/MyContent/Orb.Orb;
@@ -810,6 +811,66 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
+MyCharacter_C.Default=True
+MyHUD_C.Appearance=True
+MyHUD_C.Designer=True
+MyHUD_C.Input=True
+MyHUD_C.Interaction=True
+MyHUD_C.Performance=True
+MyHUD_C.Layout=True
+MyHUD_C.Behavior=True
+MyHUD_C.Render Transform=True
+MyHUD_C.Accessibility=True
+MyHUD_C.Clipping=True
+MyHUD_C.Navigation=True
+MyHUD_C.Localization=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -830,7 +891,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/MyContent
+ContentBrowserTab1.SelectedPaths=/Game/MyContent/Character
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -842,6 +903,12 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
+GlobalAssetPicker.ActiveTypeFilters=
+GlobalAssetPicker.EnabledTypeFilters=
+GlobalAssetPicker.ActiveFrontendFilters=
+GlobalAssetPicker.EnabledFrontendFilters=
+GlobalAssetPicker.ThumbnailSizeScale=0.100000
+GlobalAssetPicker.CurrentViewType=0
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -865,6 +932,10 @@ SceneComponent=
 ActorComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent=
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 
 [MessageLog]
 LastLogListing=MapCheck
@@ -983,18 +1054,20 @@ bConvertSceneUnit=False
 StaticMeshActor.Materials=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyContent/MovableAssets/EndOfLevelDoor
-MRUItem1=/Game/MyContent/Orb
-MRUItem2=/Game/MyContent/Character/MyCharacter
-MRUItem3=/Game/MyContent/MovableAssets/EnemyHead
-MRUItem4=/Game/MyContent/MyPlayerController
-MRUItem5=/Game/MyContent/MyGameMode
-MRUItem6=/Game/MyContent/EndOfLevelDoor
-MRUItem7=/Game/MyContent/Meshes/Enemy/craneo
-MRUItem8=/Game/MyContent/EnemyHead
-MRUItem9=/Game/MyContent/Meshes/Enemy/Group5732Mat
-MRUItem10=/Game/MyContent/Assets/U_Wall
-MRUItem11=/Game/StarterContent/Materials/M_CobbleStone_Pebble
+MRUItem0=/Game/MyContent/Character/MyCharacter
+MRUItem1=/Game/MyContent/HUD/MyHud
+MRUItem2=/Game/MyContent/MovableAssets/Orb
+MRUItem3=/Game/MyContent/MovableAssets/EndOfLevelDoor
+MRUItem4=/Game/MyContent/Orb
+MRUItem5=/Game/MyContent/MovableAssets/EnemyHead
+MRUItem6=/Game/MyContent/MyPlayerController
+MRUItem7=/Game/MyContent/MyGameMode
+MRUItem8=/Game/MyContent/EndOfLevelDoor
+MRUItem9=/Game/MyContent/Meshes/Enemy/craneo
+MRUItem10=/Game/MyContent/EnemyHead
+MRUItem11=/Game/MyContent/Meshes/Enemy/Group5732Mat
+MRUItem12=/Game/MyContent/Assets/U_Wall
+MRUItem13=/Game/StarterContent/Materials/M_CobbleStone_Pebble
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble=1
@@ -1010,6 +1083,7 @@ MRUItem11=/Game/StarterContent/Materials/M_CobbleStone_Pebble
 /Game/MyContent/MovableAssets/EnemyHead.EnemyHead=0
 /Game/MyContent/Orb.Orb=1
 /Game/MyContent/MovableAssets/Orb.Orb=0
+/Game/MyContent/HUD/MyHud.MyHUD=0
 
 [MaterialEditor]
 PrimType=1
@@ -1071,7 +1145,7 @@ bMaterialQualityUsed[3]=0
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
-WindowSize=X=1509.000 Y=952.000
+WindowSize=X=2371.000 Y=1383.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1996,6 +2070,8 @@ StaticMeshEditor.TimeStamp=2023.07.17-18.42.21
 StaticMeshEditor.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2023.07.17-18.40.34
 BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2023.07.17-18.42.10
+SequencerWidgets.LastCompileMethod=Unknown
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -2124,4 +2200,76 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,In
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.UseObject,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.LookUpDown,InputSettings.Bindings.AxisMappings.LookRightLeft,InputSettings.Bindings.AxisMappings.MoveForwardBackward,InputSettings.Bindings.AxisMappings.MoveRightLeft,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.UseObject,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.LookUpDown,InputSettings.Bindings.AxisMappings.LookRightLeft,InputSettings.Bindings.AxisMappings.MoveForwardBackward,InputSettings.Bindings.AxisMappings.MoveRightLeft,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.UseObject,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.LookUpDown,InputSettings.Bindings.AxisMappings.LookRightLeft,InputSettings.Bindings.AxisMappings.MoveForwardBackward,InputSettings.Bindings.AxisMappings.MoveRightLeft,
+
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=True
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
