Conplete GAME : Add HUD and Audio to the game.

--- a/ScoreGame/Config/DefaultEngine.ini
+++ b/ScoreGame/Config/DefaultEngine.ini
@@ -17,3 +17,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/ScoreGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/ScoreGame")
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.YourCompany.UE4Game
+ApplicationDisplayName=UE4Game
+bPackageDataInsideApk=True
+
