--- a/ScoreGame/Config/DefaultGame.ini
+++ b/ScoreGame/Config/DefaultGame.ini
@@ -2,7 +2,12 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=F6BC823747F130ADACB9E68E33FC8FEF
+Description=This is my demo
+ProjectName=UE4Game
+ProjectVersion=23.7.31.1
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "D5D7FB1641DDEFDC0BE5D1BA39E0EB85", "Beginner UE4Game")
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
