--- a/ScoreGame/Config/DefaultInput.ini
+++ b/ScoreGame/Config/DefaultInput.ini
@@ -83,6 +83,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="UseObject",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
 +ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
++ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch1)
++ActionMappings=(ActionName="UseObject",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Touch2)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Android_Back)
 +AxisMappings=(AxisName="LookUpDown",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpDown",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="LookRightLeft",Scale=1.000000,Key=MouseX)
